--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,11 @@
+
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
+    "baseUrl": "src",  // Esto permite usar rutas absolutas desde la carpeta 'src'
+    "paths": {
+      "*": ["*"]
+    },
     // File Layout
     "rootDir": "src",
     "outDir": "dist",
@@ -42,6 +47,6 @@
     "skipLibCheck": true,
 
     "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   }
 }
